Include Facebook login settings

--- a/myCoach/Info.plist
+++ b/myCoach/Info.plist
@@ -40,5 +40,25 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb414146218918653</string>
+            </array>
+        </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>414146218918653</string>
+    <key>FacebookDisplayName</key>
+    <string>myCoach</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
+    </array>
 </dict>
 </plist>
